--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christoph Diehl</title>
-    <link rel="shortcut icon" type="image/png" href="static/images/avatar.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="static/images/avatar.jpg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
@@ -357,17 +357,17 @@
                     <dd>A utility for managing RAM disks.</dd>
                     <dt><a href="https://packetstormsecurity.com/files/download/44283/mistress.rar">mistress</a></dt>
                     <dd>Modular fuzzer written in Python.</dd>
-                    <dt><a href="flashback-0.1.zip">flashback</a></dt>
+                    <dt><a href="public/programs/flashback-0.1.zip">flashback</a></dt>
                     <dd>Simple file fuzzer with a WebUI.</dd>
-                    <dt><a href="picasso-0.1.tar.gz">picasso</a></dt>
+                    <dt><a href="public/programs/picasso-0.1.tar.gz">picasso</a></dt>
                     <dd>Steganography tool to hide text in the LSB of a byte inside a picture.</dd>
-                    <dt><a href="ostrich-0.1.zip">ostrich</a></dt>
+                    <dt><a href="public/programs/ostrich-0.1.zip">ostrich</a></dt>
                     <dd>Modular fuzzer written in C.</dd>
                     <dt>primel</dt>
                     <dd>Non-listing backdoor for Linux/BSD systems. In sniffing mode it waits for incoming packets at
                         predefined ports and provides a secure shell after the right packet-port-combination.
                     </dd>
-                    <dt><a href="programs/hspoof-0.2.tar.gz">hspoof</a></dt>
+                    <dt><a href="public/programs/hspoof-0.2.tar.gz">hspoof</a></dt>
                     <dd>Fakes an incoming HTTP GET request with spoofed HTTP Referer and User-Agent while you are
                         surfing with your browser by acting like a local proxy server.
                     </dd>
