--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                  data-original-title="Octo.js"
                  data-content="A unified fuzzing library in JavaScript."/>
         </a>
-        <a href="https://github.com/MozillaSecurity/dolly">
+        <a href="https://github.com/mozillasecurity/dolly">
             <img src="static/images/dolly.png"
                  class="pop transition-icon"
                  data-container="body" data-toggle="popover" data-placement="bottom"
@@ -353,7 +353,7 @@
             <div class="col-lg-6">
                 <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .tools</h4>
                 <dl class="dl-horizontal">
-                    <dt><a href="https://github.com/MozillaSecurity/photon">photon</a></dt>
+                    <dt><a href="https://github.com/mozillasecurity/photon">photon</a></dt>
                     <dd>A utility for managing RAM disks.</dd>
                     <dt><a href="https://packetstormsecurity.com/files/download/44283/mistress.rar">mistress</a></dt>
                     <dd>Modular fuzzer written in Python.</dd>
@@ -390,13 +390,13 @@
                     <dd>Allows developers to run their WebGL programs with the minimum allowed capabilities by WebGL
                         specification.
                     </dd>
-                    <dt><a href="http://people.mozilla.com/~cdiehl/gdbinit.txt">.gdbinit</a></dt>
+                    <dt><a href="public/misc/gdbinit.txt">.gdbinit</a></dt>
                     <dd>A small script for GDB to help in creating bug reports.</dd>
-                    <dt><a href="https://github.com/MozillaSecurity/mozilla-build-configs/">mozconfigs</a></dt>
+                    <dt><a href="https://github.com/mozillasecurity/mozilla-build-configs/">mozconfigs</a></dt>
                     <dd>Custom mozilla build configurations for various purposes, i.e feature enabled builds of
                         Firefox.
                     </dd>
-                    <dt><a href="http://people.mozilla.com/~cdiehl/fonts/">fonts</a></dt>
+                    <dt><a href="public/misc/coverage/fonts/">fonts</a></dt>
                     <dd>Distribution of font tables across various platforms.</dd>
                 </dl>
             </div>
