--- a/index.html
+++ b/index.html
@@ -264,14 +264,15 @@
                     <dt><a href="public/exploits/tt-ca-ntopensection.py">CA-NtOpenSection.py</a></dt>
                     <dd>CA Internet Security Suite NtCreateKey()</dd>
                     <br>
-                    <h4><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .shellcode</h4>
+                    <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .bytecode</h4>
                     <br>
                     <dl class="dl-horizontal">
-                        <dt><a href="public/exploits/bytecode/bsd.tar.gz">bsd.tar.gz</a></dt>
+                        <dt><a href="public/bytecode/bsd.tar.gz">bsd.tar.gz</a></dt>
                         <dd>various BSD shellcode</dd>
-
-                        <dt><a href="public/exploits/bytecode/linux.tar.gz">linux.tar.gz</a></dt>
+                        <dt><a href="public/bytecode/linux.tar.gz">linux.tar.gz</a></dt>
                         <dd>various Linux shellcode</dd>
+                        <dt><a href="public/bytecode/linux-x86">linux-x86/</a></dt>
+                        <dd>various syscalls as Assembler source</dd>
                     </dl>
                 </dl>
             </div>
