--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <dd>various BSD shellcode</dd>
                         <dt><a href="public/bytecode/linux.tar.gz">linux.tar.gz</a></dt>
                         <dd>various Linux shellcode</dd>
-                        <dt><a href="public/bytecode/linux-x86">linux-x86/</a></dt>
+                        <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/bytecode/linux-x86">linux-x86/</a></dt>
                         <dd>various syscalls as Assembler source</dd>
                     </dl>
                 </dl>
