--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 <div class="container">
     <hr class="divider"/>
-    <h4 class="section-text"><i class="fa fa-cubes section-glyph" aria-hidden="true"></i> projects</h4>
+    <h4 id="projects" class="section-text"><i class="fa fa-cubes section-glyph" aria-hidden="true"></i> projects</h4>
     <br/>
     <div class="img-evenly">
         <a href="https://github.com/mozillasecurity/framboise">
@@ -172,7 +172,7 @@
         </a>
     </div>
     <hr class="divider"/>
-    <h4 class="section-text"><i class="fa fa-cogs section-glyph" aria-hidden="true"></i> fuzzing</h4>
+    <h4 id="fuzzing" class="section-text"><i class="fa fa-cogs section-glyph" aria-hidden="true"></i> fuzzing</h4>
     <br>
     <dl class="dl-horizontal">
         <dt>WebAnimations</dt>
@@ -230,7 +230,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
-                <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .exploits</h4>
+                <h4 id="exploits" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .exploits</h4>
                 <br>
                 <dl class="dl-horizontal">
                     <dt><a href="public/exploits/tt-newspost.c">tt-newspost.c</a></dt>
@@ -277,7 +277,7 @@
                 </dl>
             </div>
             <div class="col-lg-6">
-                <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .bugs</h4>
+                <h4 id="bugs" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .bugs</h4>
                 <br>
                 <dl class="dl-horizontal">
                     <dt><a href="https://bugs.chromium.org/p/chromium/issues/detail?id=702934">702934</a></dt>
@@ -352,7 +352,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6">
-                <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .tools</h4>
+                <h4 id="tools" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .tools</h4>
                 <dl class="dl-horizontal">
                     <dt><a href="https://github.com/mozillasecurity/photon">photon</a></dt>
                     <dd>A utility for managing RAM disks.</dd>
@@ -377,7 +377,7 @@
                 </dl>
             </div>
             <div class="col-lg-6">
-                <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .texts</h4>
+                <h4 id="texts" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .texts</h4>
                 <dl class="dl-horizontal">
                     <dt><a href="https://dl.packetstormsecurity.net/shellcode/lnx86_sh.txt">lnx86_sh.txt</a></dt>
                     <dd>Describing the fundamentals in writing shellcode on Linux x86 systems.</dd>
@@ -385,7 +385,7 @@
                     <dd>Little reference to VI.</dd>
                 </dl>
                 <hr class="divider"/>
-                <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .unsorted</h4>
+                <h4 id="unsorted" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .unsorted</h4>
                 <dl class="dl-horizontal">
                     <dt><a href="http://hg.mozilla.org/mozilla-central/rev/7170a4b7a58d">7170a4b7a58d</a></dt>
                     <dd>Allows developers to run their WebGL programs with the minimum allowed capabilities by WebGL
