--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
             <div class="col-lg-6">
                 <h4 id="tools" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .tools</h4>
                 <dl class="dl-horizontal">
+                    <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/h264fuzz">h264fuzz</a></dt>
+                    <dd>A lightweight fuzzer for the encoder and decoder of OpenH264.</dd>
                     <dt><a href="https://github.com/mozillasecurity/photon">photon</a></dt>
                     <dd>A utility for managing RAM disks.</dd>
                     <dt><a href="https://packetstormsecurity.com/files/download/44283/mistress.rar">mistress</a></dt>
