Add more stuff from the sandbox times

--- a/index.html
+++ b/index.html
@@ -233,22 +233,26 @@
                 <h4 id="exploits" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .exploits</h4>
                 <br>
                 <dl class="dl-horizontal">
+                    <dt><a href="public/exploits/tt-eudora.c">tt-eudora.c</a></dt>
+                    <dd>Qualcomm Eudora Imapd Remote PreAuth Ring-0 exploit</dd>
+                    <dt><a href="public/exploits/tt-mercury.c">tt-mercury.c</a></dt>
+                    <dd>Remote shell exploit against Pegasus Mercury IMAPd</dd>
                     <dt><a href="public/exploits/tt-newspost.c">tt-newspost.c</a></dt>
                     <dd>Local exploit against Newspost 2.1.1</dd>
                     <dt><a href="public/exploits/tt-procps.c">tt-procps.c</a></dt>
                     <dd>Local exploit against procps 3.2.5</dd>
-                    <dt><a href="public/exploits/tt-mercury.c">tt-mercury.c</a></dt>
-                    <dd>Remote shell exploit against Pegasus Mercury IMAPd</dd>
+                    <dt><a href="public/exploits/tt-pwck.c">tt-pwck.c</a></dt>
+                    <dd>Local exploit against pwck</dd>
+                    <dt><a href="public/exploits/tt-kon2.c">tt-kon2.c</a></dt>
+                    <dd>Local root exploit against kon2</dd>
                     <dt><a href="public/exploits/tt-bluecoat.c">tt-bluecoat.c</a></dt>
                     <dd>BlueCoat WinProxy Remote Heap Overflow PoC</dd>
-                    <dt><a href="public/exploits/tt-eudora.c">tt-eudora.c</a></dt>
-                    <dd>Qualcomm Eudora Imapd Remote PreAuth Ring-0 exploit</dd>
                     <dt><a href="public/exploits/tt-eudora.py">tt-eudora.py</a></dt>
                     <dd>Qualcomm Eudora Email Client exploit PoC</dd>
                     <dt><a href="public/exploits/tt-lotus.py">tt-lotus.py</a></dt>
                     <dd>IBM Lotus Domino</dd>
                     <dt><a href="public/exploits/tt-sfxpoc.py">tt-sfxpoc.py</a></dt>
-                    <dd>WinRAR SFX</dd>
+                    <dd>WinRAR SFX - stack buffer overflow PoC</dd>
                     <dt><a href="public/exploits/tt-vmware.py">tt-vmware.py</a></dt>
                     <dd>VMWare VMX - file property heap overflow PoC</dd>
                     <dt><a href="public/exploits/tt-vmware.c">tt-vmware.c</a></dt>
@@ -354,10 +358,12 @@
             <div class="col-lg-6">
                 <h4 id="tools" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .tools</h4>
                 <dl class="dl-horizontal">
-                    <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/h264fuzz">h264fuzz</a></dt>
+                    <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/h264fuzz">h264fuzz/</a></dt>
                     <dd>A lightweight fuzzer for the encoder and decoder of OpenH264.</dd>
                     <dt><a href="https://github.com/mozillasecurity/photon">photon</a></dt>
                     <dd>A utility for managing RAM disks.</dd>
+                    <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/pylf">pylf/</a></dt>
+                    <dd>native Win32 debug interface</dd>
                     <dt><a href="https://packetstormsecurity.com/files/download/44283/mistress.rar">mistress</a></dt>
                     <dd>Modular fuzzer written in Python.</dd>
                     <dt><a href="public/programs/flashback-0.1.zip">flashback</a></dt>
@@ -367,7 +373,7 @@
                     <dt><a href="public/programs/ostrich-0.1.zip">ostrich</a></dt>
                     <dd>Modular fuzzer written in C.</dd>
                     <dt>primel</dt>
-                    <dd>Non-listing backdoor for Linux/BSD systems. In sniffing mode it waits for incoming packets at
+                    <dd>Non-listening backdoor for Linux/BSD systems. In sniffing mode it waits for incoming packets at
                         predefined ports and provides a secure shell after the right packet-port-combination.
                     </dd>
                     <dt><a href="public/programs/hspoof-0.2.tar.gz">hspoof</a></dt>
