Add more stuff from the sandbox times

--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
                     <dd>CA Internet Security Suite NtCreateSymbolicLinkObject()</dd>
                     <dt><a href="public/exploits/tt-ca-ntopensection.py">CA-NtOpenSection.py</a></dt>
                     <dd>CA Internet Security Suite NtCreateKey()</dd>
+                    <dt><a href="public/exploits/tt-shareutils.c">tt-shareutils.c</a></dt>
+                    <dd>Local exploit against shareutils <= 4.2.1</dd>
                     <br>
                     <h4 class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .bytecode</h4>
                     <br>
