--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <h4 id="texts" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .texts</h4>
                 <dl class="dl-horizontal">
                     <dt><a href="public/text/int.html">int.html</a></dt>
-                    <dd>Introduction with exploit examples for integer overflows.</dd>
+                    <dd>Introduction to integer overflows with exploit examples.</dd>
                     <dt><a href="https://dl.packetstormsecurity.net/shellcode/lnx86_sh.txt">lnx86_sh.txt</a></dt>
                     <dd>Fundamentals in writing shellcode on Linux x86 systems.</dd>
                     <dt><a href="public/text/vi-ref.html">vi-ref.html</a></dt>
