Add more stuff from the sandbox times

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     <dt><a href="https://github.com/mozillasecurity/photon">photon</a></dt>
                     <dd>A utility for managing RAM disks.</dd>
                     <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/pylf">pylf/</a></dt>
-                    <dd>native Win32 debug interface</dd>
+                    <dd>Fuzzing lib with a little native Win32 debug interface.</dd>
                     <dt><a href="https://packetstormsecurity.com/files/download/44283/mistress.rar">mistress</a></dt>
                     <dd>Modular fuzzer written in Python.</dd>
                     <dt><a href="public/programs/flashback-0.1.zip">flashback</a></dt>
@@ -374,7 +374,7 @@
                     <dd>Steganography tool to hide text in the LSB of a byte inside a picture.</dd>
                     <dt><a href="public/programs/ostrich-0.1.zip">ostrich</a></dt>
                     <dd>Modular fuzzer written in C.</dd>
-                    <dt>primel</dt>
+                    <dt><a href="https://github.com/posidron/posidron.github.io/tree/master/public/programs/primel/">primel/</a></dt>
                     <dd>Non-listening backdoor for Linux/BSD systems. In sniffing mode it waits for incoming packets at
                         predefined ports and provides a secure shell after the right packet-port-combination.
                     </dd>
@@ -389,6 +389,8 @@
             <div class="col-lg-6">
                 <h4 id="texts" class="section-text"><i class="fa fa-terminal section-glyph" aria-hidden="true"></i> .texts</h4>
                 <dl class="dl-horizontal">
+                    <dt><a href="public/text/fmt.txt">fmt.txt</a></dt>
+                    <dd>Introduction to format strings bugs with exploit examples.</dd>
                     <dt><a href="public/text/int.html">int.html</a></dt>
                     <dd>Introduction to integer overflows with exploit examples.</dd>
                     <dt><a href="https://dl.packetstormsecurity.net/shellcode/lnx86_sh.txt">lnx86_sh.txt</a></dt>
