--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="static/js/default.js"></script>
-    <script src="static/js/analytics.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-71766512-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+      gtag('config', 'UA-71766512-1');
+    </script>
 </head>
 <body>
 <div class="container">
