Change project name and URL

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                  data-original-title="Faulty"
                  data-content="A patch for fuzzing IPC Protocol Definition Language (IPDL) Protocols."/>
         </a>
-        <a href="https://mozillasecurity.github.io/fuzzos">
+        <a href="https://github.com/mozillasecurity/orion">
             <img src="static/images/fuzzos.png"
                  class="pop transition-icon"
                  data-container="body" data-toggle="popover" data-placement="bottom"
-                 data-original-title="FuzzOS"
-                 data-content="A Docker base image customized for fuzzing and running fuzzer instances at scale."/>
+                 data-original-title="Orion"
+                 data-content="Monorepo for building and publishing multiple Docker containers as microservices within a single repository."/>
         </a>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=fuzzing-shmem">
             <img src="static/images/shmem.png"
