Update project list

--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <div class="container">
       <hr class="divider" />
       <h4 id="projects" class="section-text">
-        <i class="fa fa-cubes section-glyph" aria-hidden="true"></i> inactive
+        <i class="fa fa-cubes section-glyph" aria-hidden="true"></i> inactive /
+        retired
       </h4>
       <br />
       <div class="img-evenly">
