--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700"
     />
     <link rel="stylesheet" href="static/css/default.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="static/js/default.js"></script>
     <script
@@ -51,7 +51,7 @@
           <h1><span class="handwriting">Christoph Diehl</span></h1>
         </div>
         <div class="col-md-3">
-          <div class="img-circle img-circle">
+          <div class="img-circle">
             <img class="avatar" src="static/images/avatar.jpg" />
           </div>
         </div>
