--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div id="iam-at-text">Mozilla</div>
-          <div id="iam-text">Sr. Security Engineer</div>
+          <div id="iam-at-text">Microsoft</div>
+          <div id="iam-text">Software Security Engineer</div>
         </div>
         <div class="col-md-3">
           <blockquote class="pull-right">
@@ -69,15 +69,6 @@
         <div class="col-xs-12">
           <div class="pull-right">
             <p>
-              <a class="btn btn-social" href="mailto:cdiehl@mozilla.com">
-                <span class="fa fa-envelope"></span>
-              </a>
-              <a class="btn btn-social" href="skype:nordisop@gmail.com">
-                <span class="fa fa-skype"></span>
-              </a>
-              <a class="btn btn-social" href="https://fb.com/posidron">
-                <span class="fa fa-facebook"></span>
-              </a>
               <a class="btn btn-social" href="https://twitter.com/posidron">
                 <span class="fa fa-twitter"></span>
               </a>
@@ -239,60 +230,20 @@
             data-content="A fuzzing framework which uses a DSL for building fuzzers and an observer based architecture to execute and monitor them. <a href='public/programs/demos/moz_peach_demo.webm'>Demo</a>"
           />
         </a>
+        <a href="https://github.com/mozillasecurity/dolly">
+            <img
+              src="static/images/dolly.png"
+              class="pop transition-icon"
+              data-container="body"
+              data-toggle="popover"
+              data-placement="bottom"
+              data-original-title="Dolly"
+              data-content="A Cookiecutter project template for projects in Python."
+            />
+          </a>
         </a>
       </div>
 
-      <hr class="divider" />
-      <h4 id="projects" class="section-text">
-        <i class="fa fa-cubes section-glyph" aria-hidden="true"></i> Retired
-      </h4>
-      <br />
-      <div class="img-evenly">
-        <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=fuzzing-shmem">
-          <img
-            src="static/images/shmem.png"
-            class="pop transition-icon"
-            data-container="body"
-            data-toggle="popover"
-            data-placement="bottom"
-            data-original-title="Shmem"
-            data-content="A Shared Memory fuzzer integrated in Firefox."
-          />
-        </a>
-        <a href="https://github.com/mozillasecurity/quokka">
-          <img
-            src="static/images/quokka.png"
-            class="pop transition-icon"
-            data-container="body"
-            data-toggle="popover"
-            data-placement="bottom"
-            data-original-title="Quokka"
-            data-content="A utility to launch and monitor application for faults."
-          />
-        </a>
-        <a href="https://github.com/mozillasecurity/hermes">
-          <img
-            src="static/images/hermes.png"
-            class="pop transition-icon"
-            data-container="body"
-            data-toggle="popover"
-            data-placement="bottom"
-            data-original-title="Hermes"
-            data-content="Hermes is the codename for the integrated Message Manager fuzzer in Firefox."
-          />
-        </a>
-        <a href="https://github.com/mozillasecurity/dolly">
-          <img
-            src="static/images/dolly.png"
-            class="pop transition-icon"
-            data-container="body"
-            data-toggle="popover"
-            data-placement="bottom"
-            data-original-title="Dolly"
-            data-content="A Cookiecutter project template for projects in Python."
-          />
-        </a>
-      </div>
 
       <hr class="divider" />
       <h4 id="fuzzing" class="section-text">
